--- a/virtualBeacon_front/package.json
+++ b/virtualBeacon_front/package.json
@@ -17,6 +17,7 @@
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
     "react-chartjs-2": "^2.9.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.3",
     "react-router-dom": "^5.1.2",
