--- a/virtualBeacon_back/Dockerfile
+++ b/virtualBeacon_back/Dockerfile
@@ -51,6 +51,9 @@ COPY --chown=www:www . /var/www
 # Change current user to www
 USER www
 
+#copy ./db_init.sh /tmp    
+#ENTRYPOINT ["/tmp/db_init.sh"]
+
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 CMD ["php-fpm"]
