--- a/virtualBeacon_front/package.json
+++ b/virtualBeacon_front/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.17.1",
-    "axios": "^0.19.2",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "leaflet": "^1.6.0",
+    "leaflet": "^1.9.4",
     "moment": "^2.24.0",
     "pigeon-maps": "^0.14.0",
     "pigeon-marker": "^0.3.4",
     "pigeon-overlay": "^0.2.3",
-    "react": "^16.12.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.3.6",
-    "react-chartjs-2": "^2.9.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.12.0",
-    "react-leaflet": "^2.6.3",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^5.0.1",
     "react-simple-charts": "0.0.19",
     "react-simple-pie-chart": "^0.5.0",
-    "react-svg-donuts": "^1.0.0"
+    "react-svg-donuts": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +33,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
