--- a/virtualBeacon_back/.env
+++ b/virtualBeacon_back/.env
@@ -6,12 +6,19 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+# DB_CONNECTION=mysql
+# DB_HOST=db
+# DB_PORT=3306
+# DB_DATABASE=personal_beacon
+# DB_USERNAME=root
+# DB_PASSWORD=test
+
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=personal_beacon
 DB_USERNAME=root
-DB_PASSWORD=admin
+DB_PASSWORD=testtest
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
