--- a/virtualBeacon_front/package.json
+++ b/virtualBeacon_front/package.json
@@ -22,6 +22,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4",
     "react-simple-charts": "0.0.19",
     "react-simple-pie-chart": "^0.5.0",
     "react-svg-donuts": "^3.0.0"
