--- a/virtualBeacon_front/package.json
+++ b/virtualBeacon_front/package.json
@@ -20,12 +20,12 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
     "react-simple-charts": "0.0.19",
     "react-simple-pie-chart": "^0.5.0",
-    "react-svg-donuts": "^3.0.0"
+    "react-svg-donuts": "^3.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
